Modification du CMakeLists.txt des arbres rouges et noirs

--- a/src_br/CMakeLists.txt
+++ b/src_br/CMakeLists.txt
@@ -3,11 +3,11 @@ cmake_minimum_required(VERSION 3.0)
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH true)
 
 project(List C)
-# add_executable(tree-avl tree-avl.c tree-avl.h)
-add_library(tree-avl SHARED tree-br.c tree-br.h)
+# add_executable(tree-br tree-br.c tree-br.h)
+add_library(tree-br SHARED tree-br.c tree-br.h)
 
 install(
-	TARGETS tree-avl
+	TARGETS tree-br
 	LIBRARY DESTINATION lib
 	ARCHIVE DESTINATION lib
 	RUNTIME DESTINATION bin
@@ -22,11 +22,11 @@ install(
 # à celles qui ont le format @<var>@ pour éviter les conflits avec la syntaxe CMake ${<var>}.
 configure_file(
 		${CMAKE_CURRENT_SOURCE_DIR}/tree-br.pc.in
-	${CMAKE_CURRENT_BINARY_DIR}/tree-avl.pc
+	${CMAKE_CURRENT_BINARY_DIR}/tree-br.pc
 	@ONLY
 )
 install(
-	FILES ${CMAKE_CURRENT_BINARY_DIR}/tree-avl.pc
+	FILES ${CMAKE_CURRENT_BINARY_DIR}/tree-br.pc
 	DESTINATION share/pkgconfig
 	COMPONENT "PkgConfig"
 )
@@ -43,15 +43,15 @@ install(
 	DESTINATION cmake
 )
 
-# Ajout d'un exécutable dépendant également de tree-avl.h
-add_executable(test-tree-avl test-tree-br.c tree-br.h)
+# Ajout d'un exécutable dépendant également de tree-br.h
+add_executable(test-tree-br test-tree-br.c tree-br.h)
 # Précision de l'ordre de construction: le programme de test doit se faire
 # après la librairie
-add_dependencies(test-tree-avl tree-avl)
-# Aggrégation du programme de test avec la librairie tree-avl
-target_link_libraries(test-tree-avl tree-avl)
+add_dependencies(test-tree-br tree-br)
+# Aggrégation du programme de test avec la librairie tree-br
+target_link_libraries(test-tree-br tree-br)
 
 # Activation des tests
 enable_testing()
 # Ajout d'un test
-add_test(test-tree-avl ./test-tree-avl)
+add_test(test-tree-br ./test-tree-br)
